--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
   "license": "ISC",
   "engines": {
     "node": "6.9.1"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "inquirer": "^3.0.6",
+    "ramda": "^0.23.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
